app/styles/less/content.less
@import "mixins";
@import "variables";

#content-container {
    .offset {
        padding: 10px 20px;
    }
}

.content-searchbar {
    padding: 0 50px;
}

.content-shortinfo {
    min-height: 160px;
    padding: 40px 50px 45px 50px;
    background-color: @white;

    .name-info {
        display: inline-block;
        vertical-align: middle;
        font-size: 39px;
        font-weight: 600;
        color: @mr-blue;
    }
    .address-info {
        font-size: 15px;
        font-weight: 400px;
        color: @text-gray;
    }

    .btn-group {
        margin-top: 13px;

        .btn {
            padding: 20px;
            font-size: 12px;
            font-weight: 600;
            letter-spacing: 1px;
            text-transform: uppercase;
        }
    }
}

.content-detailedinfo {
    font-size: 0;
    .content-left, .content-right {
        display: inline-block;
        vertical-align: top;
        margin: 2.6% 3.3%;

    }
    .content-left {
        width: 37%;
    }
    .content-right {
        width: 53%;
        margin-left: 0;
    }

    .content-heading {
        font-size: 15px;
        letter-spacing: 1px;
        text-transform: uppercase;
        padding: 35px;
        color: @text-gray-light;
        background-color: @content-heading-bg;
        box-shadow: 0 0 .7rem 0 rgba(0,0,0,.15);

        &--actions {
            float: right;

            i {
                font-size: 24px;
                line-height: 22px;
                cursor: pointer;
                color: @text-gray-light;
                &:hover {
                    color: @text-gray;
                }
            }
        }
    }

    .content-searchbar {
        font-size: 15px;
        color: @text-gray;
        padding: 0;
        background-color: @white;
        box-shadow: 0 0 .7rem 0 rgba(0,0,0,.15);

        md-input-container {
            margin: 0; padding: 0;  
        }

        input {
            text-indent: 45px;
            padding: 20px 0;
            border-color: @mr-gray;
            border-width: 0 0 2px;
        }

        md-icon {
            margin-left: 15px;
            margin-top: 5px;
            color: @text-gray-light;
        }

        & + .content-details {
            padding-top: 30px;
            box-shadow: 0 5px .7rem 0 rgba(0,0,0,.15);
        }
    }

    .content-details {
        padding: 40px 45px;
        margin-bottom: 3%;
        background-color: @white;
        box-shadow: 0 0 .7rem 0 rgba(0,0,0,.15);

        .column, .columns-two {
            padding: 0 0 15px 0;
            margin: 0 0 15px 0;
            border-bottom: 1px solid @mr-gray;
        }

        > .column:first-of-type {
            padding-top: 0;
        }

        .columns-two {
            .column {
                padding-bottom: 0;
                margin-bottom: 0;
                padding-left: 30px;
                border-bottom: 0;
            }
            .column:first-of-type {
                padding-left: 0;
                padding-right: 15px;
                border-right: 1px solid @mr-gray;
            }
        }

        .column {
            font-size: 15px;
            color: @text-gray;
        }

        label, a {
            display: block;
            font-size: 15px;
            font-weight: 500;
            color: @text-blue;
            .transition(color .5s);

            &.label--info {
                color: @text-gray-light;
            }
        }
        a {
            cursor: pointer;
            &:hover { 
                color: @mr-orange;

            }
        }

        .column--with-actions {
            position: relative;
            .column--actions {
                opacity: 0;
                position: absolute;
                top: 0; right: 0;
                .transition(opacity .5s);
            }
            &:hover {
                .column--actions { opacity: 1; }
            }
        }
    }
}

.init-upload {
    text-align: center;
    margin: 20px;

    span {
        display: block;
        font-size: 24px;
        font-weight: 300;
        color: @text-gray-light;
    }

    .or-label {
        position: relative;
        font-size: 13px;
        font-style: italic;
        margin: 10px 0;
        color: @black;
        &:before , &:after {
            content: "_________";
            position: absolute;
            top: -6px;
            color: #d0d0d0;
            left: 50%;
        }
        &:before { margin-left: -62px; }
        &:after { margin-left: 15px; }
    }

    i {
        font-size: 5em;
        color: @text-gray-light; 
        margin-bottom: 20px;
    }

    label {
        margin-top: 5px;
        font-size: 11px;
    }
}

